# fan_controller

./: CMakeLists.txt  README.md
application_mock/: CMakeLists.txt
application_mock/include/: wireless_receiver.h
application_mock/src/: main.c  wireless_receiver.c
fan_controller/: CMakeLists.txt
fan_controller/include/: fan_driver.h  registers.h  simulated_register_area.h
fan_controller/public/: fan_control_protocol.h
fan_controller/src/: fan_control_protocol.c  fan_driver.c  simulated_register_area.c
include/: wireless_receiver.h
include/fan_controller/: fan_control_protocol.h
src/: main.c  wireless_receiver.c
src/fan_controller/: fan_control_protocol.c  fan_driver.c
tcp_client/: python-client.py
test/: CMakeLists.txt
test/src/: tests.c
